# template-website

./: Cargo.toml  Users.toml
backend/src/: main.rs
backend/src/pages/: mod.rs
frontend/pages/: base.html  dashboard.html  login.html
frontend/templates/: base.html
src/: main.rs
src/pages/: dashboard.rs  login.rs  mod.rs
